--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,8 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    # Latest Ubuntu LTS
+    runs-on: ubuntu-22.04
 
     steps:
       - uses: actions/checkout@v2
