--- a/game/export_presets.cfg
+++ b/game/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Linux"
+name="linux.x86_64"
 platform="Linux/X11"
 runnable=true
 dedicated_server=false
@@ -40,7 +40,7 @@ rm -rf \"{temp_dir}\""
 
 [preset.1]
 
-name="macOS"
+name="macos.universal"
 platform="macOS"
 runnable=true
 dedicated_server=false
@@ -143,7 +143,7 @@ rm -rf \"{temp_dir}\""
 
 [preset.2]
 
-name="Windows"
+name="win64"
 platform="Windows Desktop"
 runnable=true
 dedicated_server=false
