--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -15,18 +15,33 @@ jobs:
           # Latest Ubuntu LTS
           - os: ubuntu-22.04
             edition: "linux.x86_64"
-            preset: "Linux"
+            output: "xonix.x86_64"
 
     runs-on: ${{matrix.os}}
 
     steps:
       - uses: actions/checkout@v2
 
+      - name: Download Editor
+        run: |
+          python scripts/download.py editor --godot-version "${{env.GODOT_VERSION}}" --godot-edition "${{matrix.edition}}"
+          mv "Godot_v${{env.GODOT_VERSION}}-stable_linux.x86_64" "godot"
+          chmod +x ./godot
+
+      - name: Download Export Templates
+        run: python scripts/download.py export-templates --godot-version "${{env.GODOT_VERSION}}"
+
+      - name: Configure CMake
+        run: cmake . -DCMAKE_BUILD_TYPE="${{env.BUILD_TYPE}}"
+
       - name: Build
-        env:
-          GODOT_EDITION: ${{matrix.edition}}
-          GODOT_PRESET: ${{matrix.preset}}
-        run: python scripts/build.py
+        run: cmake --build . --config ${{env.BUILD_TYPE}}
+
+      - name: Import Project
+        run: ./godot game --headless --editor --quit
+
+      - name: Export
+        run: ./godot game --headless --export-release "${{matrix.edition}}" "${{matrix.output}}"
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
