--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Download Editor
         run: |
           python scripts/download.py editor --godot-version "${{env.GODOT_VERSION}}" --godot-edition "${{matrix.edition}}"
-          mv "Godot_v${{env.GODOT_VERSION}}-stable_linux.x86_64" "godot"
-          chmod +x ./godot
+          mv "Godot_v${{env.GODOT_VERSION}}-stable_linux.x86_64" "./game/godot"
+          chmod +x "./game/godot"
 
       - name: Download Export Templates
         run: python scripts/download.py export-templates --godot-version "${{env.GODOT_VERSION}}"
