--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -46,13 +46,13 @@ jobs:
         run: python3 scripts/download.py editor --godot-version "${{env.GODOT_VERSION}}" --godot-edition "${{matrix.edition}}"
 
       - name: Prepare Editor (Linux)
-        if: runner.os == "Linux"
+        if: runner.os == 'Linux'
         run: |
           mv "Godot_v${{env.GODOT_VERSION}}-stable_linux.x86_64" "./godot"
           chmod +x "./godot"
 
       - name: Prepare Editor (macOS)
-        if: runner.os == "macOS"
+        if: runner.os == 'macOS'
         run: chmod +x "./Godot.app/Contents/MacOS/Godot"
 
       - name: Download Export Templates
