--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -70,13 +70,13 @@ jobs:
 
       - name: Import Project
         working-directory: ${{runner.workspace}}/xonix/game
-        run: ".${{steps.editor.PATH}}" --headless --editor --quit
+        run: ".${{steps.editor.outputs.PATH}}" --headless --editor --quit
 
       - name: Export
         working-directory: ${{runner.workspace}}/xonix/game
         run: |
           mkdir "../export"
-          ".${{steps.editor.PATH}}" --headless --export-release "${{matrix.edition}}" "../export/${{matrix.output}}"
+          ".${{steps.editor.outputs.PATH}}" --headless --export-release "${{matrix.edition}}" "../export/${{matrix.output}}"
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
