Fix duplicate id

--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -45,19 +45,16 @@ jobs:
       - name: Download Editor
         run: python3 scripts/download.py editor --godot-version "${{env.GODOT_VERSION}}" --godot-edition "${{matrix.edition}}"
 
-      - name: Prepare Editor (Linux)
+      - name: Prepare Editor
         id: editor
-        if: runner.os == 'Linux'
         run: |
-          chmod +x "./Godot_v${{env.GODOT_VERSION}}-stable_linux.x86_64"
-          echo "PATH=./Godot_v${{env.GODOT_VERSION}}-stable_linux.x86_64" >> "$GITHUB_OUTPUT"
-
-      - name: Prepare Editor (macOS)
-        id: editor
-        if: runner.os == 'macOS'
-        run: |
-          chmod +x "./Godot.app/Contents/MacOS/Godot"
-          echo "PATH=./Godot.app/Contents/MacOS/Godot" >> "$GITHUB_OUTPUT"
+          if [ "$RUNNER_OS" == "Linux" ]; then
+              chmod +x "./Godot_v${{env.GODOT_VERSION}}-stable_linux.x86_64"
+              echo "PATH=./Godot_v${{env.GODOT_VERSION}}-stable_linux.x86_64" >> "$GITHUB_OUTPUT"
+          elif [ "$RUNNER_OS" == "macOS" ]; then
+              chmod +x "./Godot.app/Contents/MacOS/Godot"
+              echo "PATH=./Godot.app/Contents/MacOS/Godot" >> "$GITHUB_OUTPUT"
+          fi
 
       - name: Download Export Templates
         run: python3 scripts/download.py export-templates --godot-version "${{env.GODOT_VERSION}}"
