--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -18,7 +18,7 @@ jobs:
             output: "xonix.x86_64"
           - os: macos-latest
             edition: "macos.universal"
-            output: "xonix.zip"
+            output: "xonix.dmg"
 
     runs-on: ${{matrix.os}}
 
