--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -78,5 +78,5 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: xonix
+          name: xonix-${{matrix.edition}}
           path: export
