Fix preset name

--- a/game/export_presets.cfg
+++ b/game/export_presets.cfg
@@ -143,7 +143,7 @@ rm -rf \"{temp_dir}\""
 
 [preset.2]
 
-name="win64"
+name="win64.exe"
 platform="Windows Desktop"
 runnable=true
 dedicated_server=false
