--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -42,15 +42,14 @@ jobs:
           path: Godot*export_templates.tpz
           key: godot-${{env.GODOT_VERSION}}-export-templates
 
-      - name: Install Dependencies (Windows)
-        if: runner.os == 'Windows'
-        run: choco install python
-
       - name: Install Dependencies
         run: pip3 install requests
 
       - name: Download Editor
-        run: python3 scripts/download.py editor --godot-version "${{env.GODOT_VERSION}}" --godot-edition "${{matrix.edition}}"
+        uses: actions/setup-python@v4
+        with:
+          python-version: ">=3.10"
+        run: python scripts/download.py editor --godot-version "${{env.GODOT_VERSION}}" --godot-edition "${{matrix.edition}}"
 
       - name: Prepare Editor
         id: editor
@@ -66,7 +65,10 @@ jobs:
           fi
 
       - name: Download Export Templates
-        run: python3 scripts/download.py export-templates --godot-version "${{env.GODOT_VERSION}}"
+        uses: actions/setup-python@v4
+        with:
+          python-version: ">=3.10"
+        run: python scripts/download.py export-templates --godot-version "${{env.GODOT_VERSION}}"
 
       - name: Configure CMake
         run: cmake . -DCMAKE_BUILD_TYPE="${{env.BUILD_TYPE}}"
