--- a/.github/workflows/desktop.yml
+++ b/.github/workflows/desktop.yml
@@ -70,7 +70,7 @@ jobs:
         run: python scripts/download.py export-templates --godot-version "${{env.GODOT_VERSION}}"
 
       - name: Configure CMake
-        run: cmake . -DCMAKE_BUILD_TYPE="${{env.BUILD_TYPE}}"
+        run: cmake . -DCMAKE_BUILD_TYPE="${{env.BUILD_TYPE}}" -DCMAKE_OSX_ARCHITECTURES="x86_64;arm64"
 
       - name: Build
         run: cmake --build . --config ${{env.BUILD_TYPE}}
