--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Prepare Editor Settings
         run: |
           mkdir -p "$HOME/.config/godot"
-          set CONFIG_PATH="$HOME/.config/godot/editor_settings-4.tres"
+          export CONFIG_PATH="$HOME/.config/godot/editor_settings-4.tres"
           echo "[gd_resource type=\"EditorSettings\" format=3]" > "$CONFIG_PATH"
           echo "[resource]" >> "$CONFIG_PATH"
           echo "export/android/android_sdk_path = \"/usr/local/lib/android/sdk\""
