--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,15 @@ FetchContent_Declare(godot-cpp
 FetchContent_MakeAvailable(godot-cpp)
 
 # Create library
-add_library(${PROJECT_NAME} SHARED)
+if (EMSCRIPTEN)
+	add_executable(${PROJECT_NAME})
+	set(CMAKE_EXECUTABLE_SUFFIX ".wasm")
+	set_target_properties(${PROJECT_NAME} PROPERTIES
+		COMPILE_FLAGS "-Os -s SIDE_MODULE=1"
+		LINK_FLAGS "-Os -s WASM=1 -s SIDE_MODULE=1 -s STANDALONE_WASM --no-entry")
+else ()
+	add_library(${PROJECT_NAME} SHARED)
+endif ()
 
 # Add -android suffix to differentiate from Linux builds
 if (ANDROID)
