Override custom template path

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -69,6 +69,11 @@ jobs:
       - name: Build
         run: cmake --build . --config ${{env.BUILD_TYPE}}
 
+      - name: Prepare Project
+        env:
+          TEMPLATE_PATH: "$HOME/.local/share/godot/export_templates/$GODOT_VERSION.stable/web_dlink_release.zip"
+        run: sed -i '' -e 's/custom_template\/release=\"\"/custom_template\/release=\"$TEMPLATE_PATH\"/g' "game/export_presets.cfg"
+
       - name: Import Project
         shell: bash
         working-directory: ${{runner.workspace}}/xonix/game
