Custom export templates for web

--- a/game/export_presets.cfg
+++ b/game/export_presets.cfg
@@ -423,8 +423,8 @@ encrypt_directory=false
 
 [preset.4.options]
 
-custom_template/debug=""
-custom_template/release=""
+custom_template/debug="../templates/web_dlink_debug.zip"
+custom_template/release="../templates/web_dlink_release.zip"
 variant/extensions_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
