--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -74,11 +74,13 @@ jobs:
         working-directory: ${{runner.workspace}}/xonix/game
         run: ${{steps.editor.outputs.PATH}} --headless --editor --quit || true
 
+      - name: Prepare Project
+        run: python scripts/download.py export-templates --godot-version "${{env.GODOT_VERSION}}" --no-install
+
       - name: Export
         shell: bash
         working-directory: ${{runner.workspace}}/xonix/game
         run: |
-          python scripts/download.py export-templates --godot-version "${{env.GODOT_VERSION}}" --no-install
           mkdir "../export"
           ${{steps.editor.outputs.PATH}} --headless --export-release "web" "../export/index.html" || true
 
