--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,8 @@ if (EMSCRIPTEN)
 	add_executable(${PROJECT_NAME})
 	set(CMAKE_EXECUTABLE_SUFFIX ".wasm")
 	set_target_properties(${PROJECT_NAME} PROPERTIES
-		COMPILE_FLAGS "-Os -s SIDE_MODULE=1"
-		LINK_FLAGS "-Os -s WASM=1 -s SIDE_MODULE=1 -s STANDALONE_WASM --no-entry")
+		COMPILE_FLAGS "-Os -s SIDE_MODULE=2 -s SHARED_MEMORY=1"
+		LINK_FLAGS "-Os -s WASM=1 -s SIDE_MODULE=2 -s SHARED_MEMORY=1 -s STANDALONE_WASM --no-entry")
 else ()
 	add_library(${PROJECT_NAME} SHARED)
 endif ()
