--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: 'emscripten-core/emsdk'
+          path: 'emsdk'
 
       - uses: actions/setup-python@v4
         with:
