--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -46,7 +46,6 @@ jobs:
         run: |
           ./emsdk install latest
           ./emsdk activate latest
-          source ./emsdk_env.sh
 
       - name: Download Editor
         run: python scripts/download.py editor --godot-version "${{env.GODOT_VERSION}}" --godot-edition "${{env.GODOT_EDITION}}"
@@ -73,7 +72,9 @@ jobs:
         run: cmake --build . --config ${{env.BUILD_TYPE}}
 
       - name: Configure CMake
-        run: emcmake cmake . -DCMAKE_BUILD_TYPE="${{env.BUILD_TYPE}}"
+        run: |
+          source ./emsdk/emsdk_env.sh
+          emcmake cmake . -DCMAKE_BUILD_TYPE="${{env.BUILD_TYPE}}"
 
       - name: Build
         run: cmake --build . --config ${{env.BUILD_TYPE}}
