--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,8 @@ if (EMSCRIPTEN)
 	set(CMAKE_EXECUTABLE_SUFFIX ".wasm")
 	# https://github.com/godotengine/godot/blob/master/platform/web/SCsub
 	set_target_properties(${PROJECT_NAME} PROPERTIES
-		COMPILE_FLAGS "-O3 -s SIDE_MODULE=1"
-		LINK_FLAGS "-O3 -s SIDE_MODULE=1 -s WASM_MEM_MAX=2048MB")
-	target_compile_definitions(${PROJECT_NAME} PRIVATE PTHREAD_NO_RENAME)
+		COMPILE_FLAGS "-O3 -s SIDE_MODULE=1 -s SHARED_MEMORY=1"
+		LINK_FLAGS "-O3 -s SIDE_MODULE=1 -s SHARED_MEMORY=1 -s WASM_MEM_MAX=2048MB")
 else ()
 	add_library(${PROJECT_NAME} SHARED)
 endif ()
