--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ if (EMSCRIPTEN)
 	# https://github.com/godotengine/godot/blob/master/platform/web/SCsub
 	set_target_properties(${PROJECT_NAME} PROPERTIES
 		COMPILE_FLAGS "-O3 -s SIDE_MODULE=2 -s SHARED_MEMORY=1 -mbulk-memory -matomics"
-		LINK_FLAGS "-O3 -s SIDE_MODULE=2 -s SHARED_MEMORY=1 -s WASM_MEM_MAX=2048MB")
+		LINK_FLAGS "-O3 -s SIDE_MODULE=2 -s SHARED_MEMORY=1 -mbulk-memory -matomics -s WASM_MEM_MAX=2048MB")
 else ()
 	add_library(${PROJECT_NAME} SHARED)
 endif ()
